--- a/assignment5/Makefile
+++ b/assignment5/Makefile
@@ -1,14 +1,15 @@
 CC = gcc
 CFLAGS = -Wall -pthread
 TARGET = multithread
+PQUEUE_TARGET = pqueuepmain
 
-all: $(TARGET)
+all: $(TARGET) $(PQUEUE_TARGET)
 
 $(TARGET): multithread.c
 	$(CC) $(CFLAGS) multithread.c -o $(TARGET)
 
-run: $(TARGET)
-	./$(TARGET)
+$(PQUEUE_TARGET): pqueuepmain.c
+	$(CC) $(CFLAGS) pqueuepmain.c -o $(PQUEUE_TARGET)
 
 clean:
-	rm -f $(TARGET)
+	rm -f $(TARGET) $(PQUEUE_TARGET)
